[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-display", "curses"]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
